add watch and livereload to gulp task

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.8.10",
     "gulp-util": "^3.0.1",
     "gulp-sass": "^1.1.0",
-    "gulp-sourcemaps": "^1.2.8"
+    "gulp-sourcemaps": "^1.2.8",
+    "gulp-livereload": "^2.1.1"
   }
 }
