--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "lodash": "~2.4.1",
     "jquery": "~2.1.1",
     "draggable-number.js": "~0.3.4",
-    "gsap": "~1.14.2"
+    "gsap": "~1.14.2",
+    "FileSaver": "*"
   }
 }
