--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "motion-control",
-  "version": "0.0.1",
+  "name": "TweenTime",
+  "version": "1.0.",
   "dependencies": {
     "requirejs": "~2.1.15",
     "requirejs-text": "~2.0.12",
@@ -8,7 +8,6 @@
     "coffee-script": "~1.8.0",
     "js-signals": "~1.0.0",
     "almond": "~0.3.0",
-    "threejs": "*",
     "d3": "~3.4.10",
     "mustache.js": "~0.8.2",
     "lodash": "~2.4.1",
