--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "TweenTime",
-  "version": "1.0.",
+  "version": "1.1.1",
   "dependencies": {
     "requirejs": "~2.1.15",
     "requirejs-text": "~2.0.12",
