--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.4.0",
   "author": "stimul.ch / David Mignot",
   "devDependencies": {
-    "requirejs": "^2.1.15",
-    "coffee-script": "^1.8.0",
     "gulp": "^3.8.10",
     "gulp-util": "^3.0.1",
     "gulp-sass": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
-    "gulp-livereload": "^2.1.1"
+    "gulp-livereload": "^2.1.1",
+    "webpack": "^1.4.13",
+    "6to5": "^1.15.0",
+    "6to5-loader": "^0.2.4",
+    "coffee-script": "^1.8.0",
+    "coffee-loader": "^0.7.2",
+    "html-loader": "^0.2.3"
   }
 }
