--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-util": "^3.0.1",
-    "gulp-sass": "^1.2.4",
-    "gulp-sourcemaps": "^1.2.8",
+    "gulp-sass": "1.2.3",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-livereload": "^3.0.2",
     "webpack": "^1.4.14",
     "6to5": "^1.15.0",
@@ -15,6 +15,8 @@
     "loader-utils": "^0.2.5",
     "mustache-loader": "^0.2.0",
     "gulp-jshint": "^1.9.0",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "gulp-csso": "^0.2.9",
+    "gulp-autoprefixer": "^2.1.0"
   }
 }
