--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "1.7.9",
   "author": "stimul.ch / David Mignot",
   "devDependencies": {
+    "babel": "^6.0.15",
+    "babel-core": "^6.1.2",
+    "babel-eslint": "^4.1.4",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.1.2",
+    "eslint": "^1.8.0",
     "gulp": "^3.8.10",
-    "gulp-util": "^3.0.1",
-    "gulp-sass": "2.1.0",
-    "gulp-sourcemaps": "^1.3.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-eslint": "^1.0.0",
     "gulp-livereload": "^3.0.2",
-    "webpack": "^1.4.14",
-    "6to5": "^1.15.0",
-    "6to5-loader": "^0.2.4",
+    "gulp-minify-css": "~1.2.1",
+    "gulp-sass": "2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.1",
     "hogan.js": "^3.0.2",
-    "loader-utils": "^0.2.5",
     "mustache-loader": "^0.2.0",
-    "gulp-jshint": "^1.9.0",
-    "jshint-stylish": "^1.0.0",
-    "gulp-csso": "^0.2.9",
-    "gulp-autoprefixer": "^2.1.0"
+    "webpack": "^1.12.2"
   }
 }
