--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "babel-eslint": "^4.1.4",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
+    "browser-sync": "^2.9.12",
     "eslint": "^1.8.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-eslint": "^1.0.0",
-    "gulp-livereload": "^3.0.2",
     "gulp-minify-css": "~1.2.1",
     "gulp-sass": "2.1.0",
     "gulp-sourcemaps": "^1.6.0",
