--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "TweenTime",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "author": "stimul.ch / David Mignot",
   "dependencies": {
     "file-saver": "*",
     "d3": "^3.5.2",
-    "draggable-number.js": "git@github.com:idflood/draggable-number.js.git",
+    "draggable-number.js": "^0.4.4",
     "gsap": "^1.18.0",
     "jquery": "^2.1.1",
     "lodash": "^3.8.0",
