--- a/.npmignore
+++ b/.npmignore
@@ -6,6 +6,7 @@ assets/images/**
 assets/scripts/app.js
 assets/scripts/app.min.js
 node_modules/**
+node_modules
 obj_src/**
 references_src/**
 src/scripts/bower_components/**
