--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-eslint": "^4.1.4",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
+    "bezier-easing": "^2.0.3",
     "browser-sync": "^2.9.12",
     "eslint": "^1.8.0",
     "gulp": "^3.8.10",
